# imgkap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  build_docker.sh  imgkap.c  imgkap.h  imgkap_main.c  kml.c  kml.h
cmake/: FindFreeImage.cmake
docker/: Dockerfile.16.04  Dockerfile.18.04  Dockerfile.3.6  Dockerfile.3.8
